<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:padding="16dp" android:background="@color/secondary">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@mipmap/ic_launcher"
        android:layout_marginBottom="300dp"/>

    <EditText
        android:id="@+id/etNic"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="34dp"
        android:hint="@string/hint_nic"
        android:inputType="textCapCharacters"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgLogo" />

    <EditText
        android:id="@+id/etPassword" android:layout_width="0dp" android:layout_height="60dp"
        android:hint="@string/hint_password" android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/etNic" app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="22dp" android:textColor="@color/white" android:textColorHint="@color/white" />

    <Button
        android:id="@+id/btnLogin" android:layout_width="0dp" android:layout_height="wrap_content"
        android:text="@string/action_login" app:layout_constraintTop_toBottomOf="@id/etPassword"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" android:backgroundTint="@color/accent" android:textColor="@color/black" />

    <TextView
        android:id="@+id/tvGoRegister" android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/action_go_register" app:layout_constraintTop_toBottomOf="@id/btnLogin"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp" android:textColor="@color/accent" />

    <ProgressBar
        android:id="@+id/progress" style="?android:attr/progressBarStyleLarge" android:visibility="gone"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvGoRegister" app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
