<?xml version="1.0" encoding="utf-8"?>

    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
        android:layout_height="match_parent" android:padding="16dp">
        <TextView
            android:id="@+id/tvTitleDashboard"
            android:text="Dashboard"
            android:textStyle="bold"
            android:textSize="26sp"
            android:textColor="@color/text_primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar" android:layout_width="match_parent" android:layout_height="wrap_content"
            android:title="@string/title_dashboard" app:layout_scrollFlags="scroll|enterAlways"/>

        <ScrollView android:layout_width="match_parent" android:layout_height="match_parent"
            android:padding="16dp" android:layout_marginTop="?attr/actionBarSize">
            <LinearLayout android:orientation="vertical" android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <include layout="@layout/include_dashboard_tiles"/>

                <Button
                    android:id="@+id/btnOpenMap" android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:text="@string/action_find_nearby_stations" android:layout_marginTop="16dp"/>

                <Button
                    android:id="@+id/btnMyBookings" android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:text="@string/action_my_bookings" android:layout_marginTop="8dp"/>
            </LinearLayout>
        </ScrollView>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>


